--- a/Atividade Portfólio/CSS/Portfólio.css
+++ b/Atividade Portfólio/CSS/Portfólio.css
@@ -1,37 +1,61 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+* {
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
 
 body {
-    background-image: url(../IMAGE/projeto-do-fundo-verde-escuro_1107-162.avif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px 20px 50px;
+    width: 100%;
+    background-color: var(--main-color);
+}
+
+header nav {
+    display: flex;
+    gap: 5%;
+    align-items: center;
 }
 
 nav {
     text-align: center;
 }
 
-.an1 {
-    text-decoration: none;
-    color: white;
-    border: 2px solid #F2A71B;
-    border-radius: 20%;
-    margin-left: 20px;
+
+
+span {
+    color: #B200CF;
 }
 
-.an2 {
-    text-decoration: none;
-    color: white;
-    border: 2px solid #F2A71B;
-    border-radius: 20%;
-
+.eu1 {
+    margin-left: 60px;
 }
 
-/* Paleta de cores que vou usar:
-#025E73
-#011F26
-#A5A692
-#BFB78F
-#F2A71B
-*/
+.estudo {
+    font-size: 23px;
+    font-weight: bold;
+}
+
+
+
+.rodape1 {
+    border-top: 2px solid black;
+    padding: 20px;
+    margin-top: 38px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 19px;
+    color: black;
+    text-align: center;
+
+
+}
