--- a/Atividade Portfólio/CSS/Portfólio.css
+++ b/Atividade Portfólio/CSS/Portfólio.css
@@ -11,51 +11,144 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-
+/* Parte do header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px 20px 50px;
     width: 100%;
-    background-color: var(--main-color);
+    background-color: white;
+    box-shadow: 2px 2px 2px black;
 }
 
 header nav {
     display: flex;
     gap: 5%;
     align-items: center;
+    color: black;
 }
 
 nav {
-    text-align: center;
+    display: flex;
+    gap: 16px;
+    align-items: center;
 }
 
+/* Fechamento do header */
 
 
-span {
-    color: #B200CF;
-}
 
+/* Parte do home */
 .eu1 {
-    margin-left: 60px;
+    margin-left: 160px;
+    padding-top: 130px;
+}
+
+.logo {
+    font-size: 40px;
+}
+
+.span1 {
+    color: #B200CF;
+    font-size: 40px;
 }
 
 .estudo {
-    font-size: 23px;
+
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.guitarraimg1 {
+    display: flex;
+align-content: e;
+}
+
+/* Fechamento do home */
+
+.borda1 {
+    border-top: 2px solid black;
+}
+
+/* Parte do sobre */
+.sobre1 {
+    padding: 20px;
+    margin-top: 38px;
+}
+
+.span2 {
+    color: #B200CF;
+}
+
+.sobrepar {
+    font-size: 18px;
     font-weight: bold;
 }
 
+.ul1 {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 10px;
+    margin-left: 30px;
+}
+
+.imghtml1 {
+    width: 55px;
+    height: 55px;
+    margin-top: 30px;
+}
+
+.imgcss1 {
+    width: 55px;
+    height: 25px;
+}
+
+/* Fechamento do sobre */
 
 
-.rodape1 {
+.borda2 {
     border-top: 2px solid black;
+}
+
+/* Parte dos projetos */
+.proje1 {
+
+    padding: 20px;
+    margin-top: 38px;
+}
+
+/* Fechamento dos projetos */
+
+.borda3 {
+    border-top: 2px solid black;
+}
+
+/* Parte dos contatos */
+.conta1 {
+
+    padding: 20px;
+    margin-top: 38px;
+}
+
+/* Fechamento dos contatos */
+
+.borda4 {
+    border-top: 2px solid black;
+}
+
+
+/* Parter do rodapé */
+.rodape1 {
     padding: 20px;
     margin-top: 38px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 19px;
-    color: black;
+    color: white;
     text-align: center;
-
-
+    background-color: black;
+    padding: 55px 0px;
 }
+
+
+/* Fechamento do rodapé */
