--- a/Atividade Portfólio/CSS/Portfólio.css
+++ b/Atividade Portfólio/CSS/Portfólio.css
@@ -22,6 +22,7 @@ header {
     width: 100%;
     height: 8vh;
     box-shadow: 2px 2px 2px black;
+    background-color: hsl(292, 60%, 50%);
 }
 
 nav {
@@ -32,6 +33,9 @@ nav {
     justify-content: space-between;
 }
 
+#head1 {
+    position: fixed;
+}
 
 .padg1 {
     padding-left: 30px;
@@ -39,8 +43,12 @@ nav {
     font-weight: bolder;
 }
 
-.nav {
-    font-size: 40px;
+.nav-menu {
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 60rem;
+    font-weight: bold;
 }
 
 .logo1 {
@@ -63,30 +71,33 @@ nav {
 
 
 /* Parte do home */
-.eu1 {
-    margin-left: 160px;
-    padding-top: 130px;
-}
+
 
 .logo2 {
-    font-size: 100px;
+    font-size: 90px;
 }
 
 .span1 {
     color: #B200CF;
-    font-size: 100px;
+    font-size: 90px;
 }
 
 .estudo {
 
     font-weight: bold;
-    font-size: 40px;
+    font-size: 30px;
 }
 
-.guitarraimg1 {
+
+.test1 {
+    /* padding: 13rem 4rem 13rem 4rem; */
+    padding-inline: 4rem;
+    padding-block: 13rem 8rem;
     display: flex;
-    align-content: e;
+    justify-content: space-around;
 }
+
+
 
 /* Fechamento do home */
 
@@ -96,7 +107,7 @@ nav {
 
 /* Parte do sobre */
 .sobre1 {
-    padding: 20px;
+   
     margin-top: 38px;
 }
 
