--- a/Atividade Portfólio/CSS/Portfólio.css
+++ b/Atividade Portfólio/CSS/Portfólio.css
@@ -107,7 +107,7 @@ nav {
 
 /* Parte do sobre */
 .sobre1 {
-   
+
     margin-top: 38px;
 }
 
@@ -181,12 +181,12 @@ nav {
 .rodape1 {
     padding: 20px;
     margin-top: 38px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 19px;
     color: white;
     text-align: center;
     background-color: black;
     padding: 55px 0px;
+    font-weight: bold;
 }
 
 
